2d6-Math.css
html { hyphens: auto }
body {
    font-family: "fbb", "Palatino";
    font-size: 12pt;
    line-height: 16pt;
    text-align: justify;
}
@media screen {
  body {
    max-width: 80ex;
  }
}
img {
    width: 40%;
}
.right {
    float: right;
    padding-left: 1em;
}
h1 {
    font-family: "Gill Sans", "Gillius ADF", "Helvetica";
    font-size: 32pt;
    line-height: 40pt;
    font-weight: normal;
    font-style: normal;
    width: 80%;
    margin-top: 10%;
    text-transform: uppercase;
    letter-spacing: 0.15em;
}
h2 {
    font-size: 24pt;
    line-height: 30pt;
    font-weight: normal;
    font-style: italic;
}
h3 {
    font-size: 14pt;
    line-height: 16pt;
    font-weight: normal;
    font-style: italic;
}
th {
    font-weight: normal;
}
td {
    padding-right: 1em;
}
.highlight {
    background-color: #ddd;
}
.break {
    break-before: always;
}
th[align="center"], td[align="center"] {
    text-align: center;
    padding: 0 1ex;
    white-space: nowrap;
    vertical-align: top;
}
@page {
    @bottom-center {
	content: counter(page);
    }
}
/* bookmarks, table of contents */
h1, h3 { bookmark-level: none }

